@@ -230,6 +230,8 @@ namespace LHAPDF {
 
     /// @brief Generate a random value from Hessian @c values and Gaussian random numbers.
     ///
+    /// @todo Needs a lot more explanation!
+    ///
     /// @todo Currently throws a UserError if this is not a Hessian set... return a randomly chosen replica?
     double randomValue(const std::vector<double>& values, const std::vector<double>& random, bool symmetrise=true) const;
 
