@@ -44,97 +44,97 @@ namespace LHAPDF {
 
 
 
-  PDFUncertainty PDFSet::uncertainty(const vector<double>& values, double inputCL, bool median) const {
+  PDFUncertainty PDFSet::uncertainty(const vector<double>& values, double cl, bool median) const {
     if (size() <= 1)
       throw UserError("Error in LHAPDF::PDFSet::uncertainty. PDF set must contain more than just the central value.");
     if (values.size() != size())
       throw UserError("Error in LHAPDF::PDFSet::uncertainty. Input vector must contain values for all PDF members.");
     const size_t nmem = size()-1;
 
+    // Get set- and requested conf levels and check sanity (req CL = set CL if cl < 0)
+    const double setCL = errorConfLevel() / 100.0; // convert from percentage
+    const double reqCL = (cl >= 0) ? cl / 100.0 : setCL; // convert from percentage
+    if (!in_range(reqCL, 0, 1) || !in_range(setCL, 0, 1))
+      throw UserError("Error in LHAPDF::PDFSet::uncertainty. Requested or PDF set confidence level outside [0,1] range.");
+
     // Return value
     PDFUncertainty rtn;
-    rtn.central = values[0];
 
     if (errorType() == "replicas") {
+      if (median) {
 
-      // Calculate the average and standard deviation using Eqs. (2.3) and (2.4) of arXiv:1106.5788v2.
-      double av = 0.0, sd = 0.0;
-      for (size_t imem = 1; imem <= nmem; imem++) {
-        av += values[imem];
-        sd += sqr(values[imem]);
+        // Compute median and requested CL directly from probability distribution of replicas
+        // Sort "values" into increasing order, ignoring zeroth member (average over replicas)
+        vector<double> sorted = values;
+        sort(sorted.begin()+1, sorted.end());
+        const int nmem = size()-1;
+        // Define central value to be median
+        if (nmem % 2) { // odd nmem => one middle value
+          rtn.central = sorted[nmem/2 + 1];
+        } else { // even nmem => average of two middle values
+          rtn.central = 0.5*(sorted[nmem/2] + sorted[nmem/2 + 1]);
+        }
+        // Define uncertainties via quantiles with a CL given by reqCL
+        const int upper = round(0.5*(1+reqCL)*nmem); // round to nearest integer
+        const int lower = 1 + round(0.5*(1-reqCL)*nmem); // round to nearest integer
+        rtn.errplus = sorted[upper] - rtn.central;
+        rtn.errminus = rtn.central - sorted[lower];
+        rtn.errsymm = 0.5*(rtn.errplus + rtn.errminus); // symmetrised
+
+      } else {
+
+        // Calculate the average and standard deviation using Eqs. (2.3) and (2.4) of arXiv:1106.5788v2.
+        double av = 0.0, sd = 0.0;
+        for (size_t imem = 1; imem <= nmem; imem++) {
+          av += values[imem];
+          sd += sqr(values[imem]);
+        }
+        av /= nmem; sd /= nmem;
+        sd = nmem/(nmem-1.0)*(sd-sqr(av));
+        sd = (sd > 0.0 && nmem > 1) ? sqrt(sd) : 0.0;
+        rtn.central = av;
+        /// @todo Need to scale this error to reqCL (assuming Gaussian stats?)
+        rtn.errplus = rtn.errminus = rtn.errsymm = sd;
+
       }
-      av /= nmem; sd /= nmem;
-      sd = nmem/(nmem-1.0)*(sd-av*av);
-      if (sd > 0.0 && nmem > 1) sd = sqrt(sd);
-      else sd = 0.0;
-      rtn.central = av;
-      rtn.errplus = rtn.errminus = rtn.errsymm = sd;
+    } else if (endswith(errorType(), "hessian")) {
 
-    } else if (errorType() == "symmhessian") {
+      rtn.central = values[0];
 
-      double errsymm = 0;
-      for (size_t ieigen = 1; ieigen <= nmem; ieigen++)
-        errsymm += sqr(values[ieigen]-values[0]);
-      rtn.errsymm = sqrt(errsymm);
-      rtn.errplus = errsymm;
-      rtn.errminus = errsymm;
-
-    } else if (errorType() == "hessian") {
-
-      // Calculate the asymmetric and symmetric Hessian uncertainties
-      // using Eqs. (2.1), (2.2) and (2.6) of arXiv:1106.5788v2.
-      double errplus = 0, errminus = 0, errsymm = 0;
-      for (size_t ieigen = 1; ieigen <= nmem/2; ieigen++) {
-        errplus += sqr(max(max(values[2*ieigen-1]-values[0],values[2*ieigen]-values[0]), 0.0));
-        errminus += sqr(max(max(values[0]-values[2*ieigen-1],values[0]-values[2*ieigen]), 0.0));
-        errsymm += sqr(values[2*ieigen-1]-values[2*ieigen]);
+      if (errorType() == "symmhessian") {
+        double errsymm = 0;
+        for (size_t ieigen = 1; ieigen <= nmem; ieigen++)
+          errsymm += sqr(values[ieigen]-values[0]);
+        rtn.errsymm = sqrt(errsymm);
+        rtn.errplus = errsymm;
+        rtn.errminus = errsymm;
+      } else if (errorType() == "hessian") {
+        // Calculate the asymmetric and symmetric Hessian uncertainties
+        // using Eqs. (2.1), (2.2) and (2.6) of arXiv:1106.5788v2.
+        double errplus = 0, errminus = 0, errsymm = 0;
+        for (size_t ieigen = 1; ieigen <= nmem/2; ieigen++) {
+          errplus += sqr(max(max(values[2*ieigen-1]-values[0],values[2*ieigen]-values[0]), 0.0));
+          errminus += sqr(max(max(values[0]-values[2*ieigen-1],values[0]-values[2*ieigen]), 0.0));
+          errsymm += sqr(values[2*ieigen-1]-values[2*ieigen]);
+        }
+        rtn.errsymm = 0.5*sqrt(errsymm);
+        rtn.errplus = sqrt(errplus);
+        rtn.errminus = sqrt(errminus);
       }
-      rtn.errsymm = 0.5*sqrt(errsymm);
-      rtn.errplus = sqrt(errplus);
-      rtn.errminus = sqrt(errminus);
-
-    } else {
-      throw MetadataError("\"ErrorType: " + errorType() + "\" not supported by LHAPDF::PDFSet::uncertainty.");
-    }
-
-    // Check that reqCl and errCL both lie between 0 and 1 (using the set CL as target if reqCL > 0)
-    const double errCL = errorConfLevel() / 100.0; // convert from percentage
-    const double reqCL = (inputCL > 0) ? inputCL / 100.0 : errCL; // convert from percentage
-    if (reqCL < 0 || reqCL > 1 || errCL < 0 || errCL > 1) return rtn;
-
-    if (errorType() == "replicas" && median) {
-
-      // Compute median and requested CL directly from probability distribution of replicas
-      // Sort "values" into increasing order, ignoring zeroth member (average over replicas)
-      vector<double> sorted = values;
-      sort(sorted.begin()+1, sorted.end());
-      const int nmem = size()-1;
-      // Define central value to be median
-      if (nmem % 2) { // odd nmem => one middle value
-        rtn.central = sorted[nmem/2 + 1];
-      } else { // even nmem => average of two middle values
-        rtn.central = 0.5*(sorted[nmem/2] + sorted[nmem/2 + 1]);
-      }
-      // Define uncertainties with a CL given by reqCL
-      int upper = round(0.5*(1+reqCL)*nmem); // round to nearest integer
-      int lower = 1 + round(0.5*(1-reqCL)*nmem); // round to nearest integer
-      rtn.errplus = sorted[upper] - rtn.central;
-      rtn.errminus = rtn.central - sorted[lower];
-      rtn.errsymm = 0.5*(rtn.errplus + rtn.errminus); // symmetrised
-
-    } else {
 
       // Calculate the qth quantile of the chi-squared distribution with one degree of freedom.
       // Examples: quantile(dist, q) = {0.988946, 1, 2.70554, 3.84146, 4} for q = {0.68, 1-sigma, 0.90, 0.95, 2-sigma}.
       boost::math::chi_squared dist(1);
-      double qerrCL = boost::math::quantile(dist, errCL);
+      double qsetCL = boost::math::quantile(dist, setCL);
       double qreqCL = boost::math::quantile(dist, reqCL);
-      const double scale = sqrt(qreqCL/qerrCL);
+      const double scale = sqrt(qreqCL/qsetCL);
+      rtn.scale = scale;
       rtn.errplus *= scale;
       rtn.errminus *= scale;
       rtn.errsymm *= scale;
-      rtn.scale = scale;
 
+    } else {
+      throw MetadataError("\"ErrorType: " + errorType() + "\" not supported by LHAPDF::PDFSet::uncertainty.");
     }
 
     return rtn;
